[package]
name = "flashblock_client_example"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde_json = "1"
futures = "0.3"
anyhow = "1"
rand = { version = "0.8", features = ["std", "std_rng"] }


